所有业务功能补齐任务已完成 ✅ 本次实现的完整清单 优先级	模块	功能	状态 P1	借阅流程	档案详情页"申请借阅"按钮	✅ P1	借阅流程	借阅管理"待借出"tab+借出操作	✅ P2	鉴定管理	后端 Mapper+Service+Controller	✅ P2	鉴定管理	到期预警接口 RetentionController	✅ P2	鉴定管理	前端页面+API	✅ P3	销毁管理	后端 Mapper+Service+Controller	✅ P3	销毁管理	前端页面+API	✅ P4	位置管理	数据库表 archive_location	✅ P4	位置管理	后端完整实现	✅ P4	位置管理	前端功能完善	✅ 新增文件（18个） 后端（12个）： AppraisalRecordMapper.java DestructionRecordMapper.java ArchiveLocationMapper.java AppraisalService.java + AppraisalServiceImpl.java DestructionService.java + DestructionServiceImpl.java LocationService.java + LocationServiceImpl.java AppraisalController.java DestructionController.java RetentionController.java 前端（6个）： api/appraisal.js api/destruction.js views/appraisal/AppraisalList.vue views/destruction/DestructionList.vue 修改文件（关键） BorrowController.java - 新增待借出列表接口 BorrowService.java / BorrowServiceImpl.java - 新增方法 ArchiveDetail.vue - 添加申请借阅功能 BorrowList.vue - 添加待借出tab和借出操作 LocationController.java - 从空壳改为完整实现 LocationList.vue - 完善CRUD功能 MainLayout.vue - 添加鉴定管理、销毁管理菜单 router/index.js - 添加新路由 01-schema.sql - 添加 archive_location 表